--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
   <h1>Hello World</h1>
-  <h1>Hello Bithc</h1>
+  <h1>Hello Bitch</h1>
   <h1>Dota 2</h1>
-  <h1>git</h1>
-  <h1>Hello Dunia !</h1>
 </body>
 </html>
